<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PulseSensor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="refresh">Refresh</string>
    
    <!-- Demo -->
	<string name="add_values">Add values to the chart</string>    
	<string name="x">X</string>    
	<string name="y">Y</string>
	<string name="add">Add</string>
	<string name="new_series">New series</string>
	<string name="realtime">Realtime</string>
	<string name="invia">Send</string>
	<string name="replay">Replay</string>
	<string name="arduino_pulse_sensor">PulseSensor</string>
	<string name="choose_date">Please choose period</string>
	<string name="from">From</string>
	<string name="uid">Uid</string>
	<string name="to">To</string>
	<string name="pick_time">Pick time</string>
	<string name="pick_date">Pick date</string>
	<string name="btn_save">Save</string>
	<string name="ip">IP Address</string>
	<string name="ip_hint">Type IP address</string>
	
	<!-- Login -->
	
	<string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="arduino_pulse_login">Login</string>
    <string name="prompt_user">User</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

</resources>
