<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/linearLayout1"
	android:orientation="vertical"
    android:background="@color/sysBlack"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    tools:context=".HomeActivity"  >
	
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uid"
        android:textColor="@color/sysWhite"
        android:textSize="20sp"
        android:layout_marginBottom="10dp" />
    
    <Spinner
        android:id="@+id/spinUid"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="left"
        android:layout_marginTop="2dp"
        android:background="@color/sysWhite"
        android:textColor="@color/sysBlack" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:textColor="@color/sysWhite"
        android:textSize="20sp" 
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/sysWhite"
        android:enabled="false"
        android:inputType="date"
        android:textColor="@color/sysBlack"
        android:clickable="false" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

         <Button
            android:id="@+id/date_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showDialog"
            android:text="@string/pick_date" />
         
        <Button
            android:id="@+id/time_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showDialog"
            android:text="@string/pick_time" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textColor="@color/sysWhite"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:inputType="date"
        android:background="@color/sysWhite"
        android:enabled="false"
        android:textColor="@color/sysBlack"
        android:clickable="false" />
        
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/date_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showDialog"
            android:text="@string/pick_date" />
        <Button
            android:id="@+id/time_button_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="showDialog"
            android:text="@string/pick_time" />

    </LinearLayout>
    
    <Button
     android:id="@+id/button2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="bottom"
     android:layout_marginTop="16dp"
     android:onClick="chartDemo"
     android:text="@string/invia" />

</LinearLayout>

