<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/pulse"
    tools:context=".HomeActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/arduino_pulse_sensor"
        android:textColor="@color/sysWhite"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"
            android:alpha="0.8"
            android:background="@color/sysBlack"
            android:gravity="center"
            android:onClick="realTime"
            android:text="@string/realtime"
            android:textAlignment="center"
            android:textColor="@color/sysWhite" />
        
        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:alpha="0.8"
            android:background="@color/sysBlack"
            android:gravity="center"
            android:onClick="chooseDate"
            android:text="@string/replay"
            android:textAlignment="center"
            android:textColor="@color/sysWhite" />

    </LinearLayout>

</RelativeLayout>